--- a/BookingHotel/BookingHotel.csproj
+++ b/BookingHotel/BookingHotel.csproj
@@ -1,3 +1,4 @@
+
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
@@ -22,6 +23,10 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="wwwroot\images\hotels\" />
+    <Folder Include="wwwroot\images\amenities\" />
+    <Folder Include="wwwroot\images\regions\" />
+    <Folder Include="wwwroot\images\services\" />
   </ItemGroup>
 
 </Project>
